--- a/app/views/pages/FAQ.html.erb
+++ b/app/views/pages/FAQ.html.erb
@@ -1,2 +1,6 @@
-<h1>Pages#FAQ</h1>
-<p>Find me in app/views/pages/FAQ.html.erb</p>
+<h1>Frequently Answered Questions</h1>
+<p>
+	Most of the answers can be found here, in our Frequently Asked Questions Section.
+	However, if you still have questions, you are always free to Contact Us and 
+	we will get back to you within 24 hours.
+</p>
