Corrected the routes

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,6 @@
-<h1>CollegeZen</h1>
+<h1>Welcome</h1>
 <p>
-	Welcome to CollegeZen!
+	Welcome to CollegeZen, our social platform for the College People. Click on the Sign Up button below to explore CollegeZen!
 </p>
+
+<%= link_to "Sign Up!", '#', :class => "signup_button round" %>
