routes and styles

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,4 +3,4 @@
 	Welcome to CollegeZen, our social platform for the College People. Click on the Sign Up button below to explore CollegeZen!
 </p>
 
-<%= link_to "Sign Up!", '#', :class => "signup_button round" %>
+<%= link_to "Sign Up!", signup_path, :class => "signup_button round" %>
