fixed nifty-generators debacle

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,2 @@
-<h1>Sign up</h1>
-
-<p>Already have an account? <%= link_to "Log in", login_path %>.</p>
-
-<%= render 'form' %>
+<h1>Users#new</h1>
+<p>Find me in app/views/users/new.html.erb</p>
