--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -3,7 +3,7 @@ html {
 }
 
 .container {
-  width: 900px;
+  width: 800px;
 }
 
 body {
@@ -130,4 +130,54 @@ div.user_info li{
 
 div.user_info span {
   font-weight:bold;
+}
+
+/* Sign up form */
+
+div.field, div.actions {
+  margin-bottom: 10px;
+}
+
+/* error messages */
+
+/* error messages */
+
+.field_with_errors {
+  padding-left: 5px;
+  padding-right:5px;
+  background-color: red;
+  display: table;
+}
+
+.field_with_errors label {
+  color: #fff;
+}
+
+#error_explanation {
+  width: 400px;
+  border: 2px solid red;
+  padding: 7px;
+  padding-bottom: 5px;
+  margin-bottom: 20px;
+  background-color: #f0f0f0;
+}
+
+#error_explanation h2 {
+  text-align: left;
+  font-weight: bold;
+  padding: 5px 5px 5px 15px;
+  font-size: 12px;
+  margin: -7px;
+  background-color: #c00;
+  color: #fff;
+}
+
+#error_explanation p {
+  color: #333;
+  margin:10px 0 0 0;
+  padding: 5px;
+}
+
+#error_explanation ul li {
+  font-size: 12px;
 }
