Done with signup

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -153,7 +153,7 @@ div.field, div.actions {
   color: #fff;
 }
 
-#error_explanation {
+.error_messages {
   width: 400px;
   border: 2px solid red;
   padding: 7px;
@@ -162,7 +162,7 @@ div.field, div.actions {
   background-color: #f0f0f0;
 }
 
-#error_explanation h2 {
+.error_messages h2 {
   text-align: left;
   font-weight: bold;
   padding: 5px 5px 5px 15px;
@@ -172,12 +172,12 @@ div.field, div.actions {
   color: #fff;
 }
 
-#error_explanation p {
+.error_messages p {
   color: #333;
   margin:10px 0 0 0;
   padding: 5px;
 }
 
-#error_explanation ul li {
+.error_messages ul li {
   font-size: 12px;
 }
