--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,7 +1,7 @@
 <h1>Sign up</h1>
 
 <%= form_for(@user) do |f| %>
-  <%= render 'shared/error_messages' %>
+  <%= f.error_messages %>
   <div class="field">
     <%= f.label :firstname %><br />
     <%= f.text_field :firstname %>
