--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,7 +6,7 @@
             <li><%= link_to "Home", root_path %></li>
             <li><%= link_to "FAQ", faq_path %></li>
             <li><%= link_to "About us", about_path %></li>
-            <li><%= link_to "Sign in", '#' %></li>
+            <li><%= link_to "Sign in", login_path %></li>
           </ul>
         </nav>
       </header>
