--- a/app/views/topics/_form.html.erb
+++ b/app/views/topics/_form.html.erb
@@ -5,5 +5,8 @@
     <%= f.label :name %><br />  
     <%= f.text_field :name %>  
   </p>  
+  <p>  
+    <textarea name="post[content]" cols="80" rows="20"><%= @post.content %></textarea>  
+  </p>  
   <p><%= f.submit "Create" %></p>  
 <% end %>  
