--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -1,15 +1,14 @@
 html {
   font-family: 'Ubuntu', sans-serif;
-  font-size:80%;
 }
 
 .container {
   width: 800px;
-    margin:0 auto;
+  
 }
 
 body {
-  background: url(background.png) #DDD;
+  background: url(../images/background.png) #DDD;
 }
 
 header {
@@ -25,8 +24,6 @@ section {
 
 section h1 {
   font-size: 200%;
-  margin:0;
-  font-weight:normal;
 }
 
 /* Links for the page*/
@@ -37,11 +34,11 @@ a {
 }
 
 a:hover {
-  color:#004560;
+  color:#004560
 }
 
 a:visited {
-  color:#004560;
+  color:#004560
 }
 
 /* Top-right Navigation */
@@ -75,7 +72,7 @@ nav ul li a {
   padding-left:15px;
   padding-right:15px;
   padding-top:10px;
-  color:#004560;
+  color:#004560
 }
 
 nav ul li a:hover {
@@ -183,24 +180,3 @@ div.field, div.actions {
 .error_messages ul li {
   font-size: 12px;
 }
-
-table tr th {background:#83BFDE;; color:#fff; padding:0; border:#83BFDE solid 1px;}  
-table tr td {border:1px #ccc solid; padding:5px;}  
-table tr td.rightright {background: #eee;}  
-table tr td h4 {margin:0; padding:0; font-weight:normal;}  
-
-.post {width:100%; display:table; margin-bottom:5px;}  
-.post span {padding:5px; margin:0;}  
-.post span.left {width:150px; background:#eee; border:3px solid #eee; display:table-cell;}  
-.post span.right { border:3px solid #eee; display:table-cell; width:80%;}   
-.post a { margin-left:5px;}
-
-.error, .alert, .notice, .success, .info {padding:0.8em;margin-bottom:1em;border:2px solid #ddd;}
-.error, .alert {background:#fbe3e4;color:#8a1f11;border-color:#fbc2c4;}
-.notice {background:#fff6bf;color:#514721;border-color:#ffd324;}
-.success {background:#e6efc2;color:#264409;border-color:#c6d880;}
-.info {background:#d5edf8;color:#205791;border-color:#92cae4;}
-.error a, .alert a {color:#8a1f11;}
-.notice a {color:#514721;}
-.success a {color:#264409;}
-.info a {color:#205791;}
