--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,5 +1,6 @@
 <%= form_for @post do |f| %>
   <%= f.error_messages %>
+  <% if params[:topic] %><input type="hidden" id="topic_forum_id" name="post[topic_id]" value="<%= params[:topic] %>" /><% end %>  
   <% if params[:topic] %>
     <input type="hidden" id="topic_forum_id" name="post[topic_id]" value="<%= params[:topic] %>" />
   <% end %>
