--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -2,14 +2,16 @@
 
 <table>
   <tr>
-    <th>Content</th>
+    <th width="100%">Content</th>
   </tr>
   <% for post in @posts %>
     <tr>
       <td><%= post.content %></td>
-      <td><%= link_to "Show", post %></td>
-      <td><%= link_to "Edit", edit_post_path(post) %></td>
-      <td><%= link_to "Destroy", post, :confirm => 'Are you sure?', :method => :delete %></td>
+	  <td></td>
+	  <td></td>	  
+      <td class="action"><%= link_to "Show", post %></td>
+      <td class="action"><%= link_to "Edit", edit_post_path(post) %></td>
+      <td class="action"><%= link_to "Destroy", post, :confirm => 'Are you sure?', :method => :delete %></td>
     </tr>
   <% end %>
 </table>
