--- a/app/views/forums/index.html.erb
+++ b/app/views/forums/index.html.erb
@@ -13,7 +13,7 @@
       <td class="right">
 	    <% if forum.most_recent_post %>
 	    <%= distance_of_time_in_words_to_now forum.most_recent_post.last_post_at %> ago by 
-	    <%= link_to forum.most_recent_post.user.firstname, "/users/#{forum.most_recent_post.last_poster_id}" %>
+	    <%= link_to forum.most_recent_post.user.to_s, "/users/#{forum.most_recent_post.last_poster_id}" %>
 	    <% else %>no posts
 	    <% end %>
 	  </td>  
