--- a/app/views/forums/show.html.erb
+++ b/app/views/forums/show.html.erb
@@ -10,7 +10,7 @@
     <tr>  
       <td><%= link_to h(topic.name), topic_path(topic.id) %>  
       <td><%= topic.posts.count %></td>  
-      <td class="right"><%= distance_of_time_in_words_to_now topic.last_post_at %> ago by <%= link_to topic.user.firstname, "/users/#{topic.last_poster_id}" %></td>  
+      <td class="right"><%= distance_of_time_in_words_to_now topic.last_post_at %> ago by <%= link_to topic.user.to_s, "/users/#{topic.last_poster_id}" %></td>  
       <td><%= link_to "Destroy", topic, :confirm => 'Are you sure?', :method => :delete %></td>  
     </tr>  
   <% end %>  
