--- a/app/assets/stylesheets/CZcustom.css
+++ b/app/assets/stylesheets/CZcustom.css
@@ -142,7 +142,7 @@ div.field, div.actions {
   margin-bottom: 10px;
 }
 
-/* error messages */
+/* Notification messages */
 
 .field_with_errors {
   padding-left: 5px;
@@ -183,24 +183,111 @@ div.field, div.actions {
 .error_messages ul li {
   font-size: 12px;
 }
-table {width:100%;}
-table tr th {background:#83BFDE;; color:#fff; padding:0; border:#83BFDE solid 1px;}  
-table tr td {border:1px #ccc solid; padding:5px;}  
-table tr td.rightright {background: #eee;}  
-table tr td h4 {margin:0; padding:0; font-weight:normal;}  
 
-.post {width:100%; display:table; margin-bottom:5px;}  
-.post span {padding:5px; margin:0;}  
-.post span.left {width:150px; background:#eee; border:3px solid #eee; display:table-cell;}  
-.post span.right { border:3px solid #eee; display:table-cell; width:80%;}   
-.post a { margin-left:5px;}
+.error, .alert, .notice, .success, .info {
+  padding:0.8em;
+  margin-bottom:1em;
+  border:2px solid #ddd;
+}
 
-.error, .alert, .notice, .success, .info {padding:0.8em;margin-bottom:1em;border:2px solid #ddd;}
-.error, .alert {background:#fbe3e4;color:#8a1f11;border-color:#fbc2c4;}
-.notice {background:#fff6bf;color:#514721;border-color:#ffd324;}
-.success {background:#e6efc2;color:#264409;border-color:#c6d880;}
-.info {background:#d5edf8;color:#205791;border-color:#92cae4;}
-.error a, .alert a {color:#8a1f11;}
-.notice a {color:#514721;}
-.success a {color:#264409;}
-.info a {color:#205791;}
+.error, .alert {
+  background:#fbe3e4;
+  color:#8a1f11;
+  border-color:#fbc2c4;
+}
+
+.notice {
+  background:#fff6bf;
+  color:#514721;
+  border-color:#ffd324;
+}
+
+.success {
+  background:#e6efc2;
+  color:#264409;
+  border-color:#c6d880;
+}
+
+.info {
+  background:#d5edf8;
+  color:#205791;
+  border-color:#92cae4;
+}
+
+.error a, .alert a {
+  color:#8a1f11;
+}
+
+.notice a {
+  color:#514721;
+}
+
+.success a {
+  color:#264409;
+}
+
+.info a {
+  color:#205791;
+}
+
+/* Forum tables*/
+
+table {
+  width:100%;
+}
+
+table tr th {
+  background:#83BFDE;
+  color:#fff;
+  padding:0;
+  border:#83BFDE solid 1px;
+} 
+		
+table tr td {
+  border:1px #ccc solid;
+  padding:5px;
+} 
+ 
+table tr td.rightright {
+  background: #eee;
+}
+  
+table tr td h4 {
+  margin:0;
+  padding:0;
+  font-weight:normal;
+}  
+
+/* Posts for forums */
+.post {
+  width:100%;
+  display:table;
+  margin-bottom:5px;
+}  
+
+.post img {
+  margin-left:20px;
+}
+
+.post span {
+  padding:5px;
+  margin:0;
+}  
+
+.post span.left {
+  width:150px;
+  background:#eee;
+  border:3px solid #eee;
+  display:table-cell;
+  font-size:90%;
+}  
+
+.post span.right {
+  border:3px solid #eee;
+  display:table-cell;
+  width:80%;
+}   
+
+.post a {
+  margin-left:5px;
+}
