--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -3,8 +3,9 @@
 <% for post in @topic.posts %>  
 <div class="post">  
   <span class="left">
-    <span>Likes: <%=post.likes=%></span><br />
+	<%= gravatar_image_tag @email %>
 	<span>Posted by: <%= link_to post.user.to_s, user_url(post.user) %></span><br /><br />
+	<span>Likes: <%=post.likes=%></span><br />
 	<% if post.user.id == current_user.id %>
 	  <%= link_to "Edit", edit_post_path(post) %>
       <%= link_to "Delete", post, :confirm => 'Are you sute?', :method => :delete %>
